# duco_raw

./: CMakeLists.txt  README.md  package.xml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/duco_msgs/: DucoAnalog.h  DucoCommand.h  DucoCommandRequest.h  DucoCommandResponse.h  DucoDigital.h  DucoGetFK.h  DucoGetFKRequest.h  DucoGetFKResponse.h  DucoGetIK.h  DucoGetIKRequest.h  DucoGetIKResponse.h  DucoIOState.h  DucoIOStates.h  DucoIOStatesRequest.h  DucoIOStatesResponse.h  DucoRobotState.h  DucoRobotStates.h  DucoRobotStatesRequest.h  DucoRobotStatesResponse.h
devel/lib/duco_controller/: duco_joint_trajectory_action
devel/lib/duco_demo/: gcr5_demo
devel/lib/pkgconfig/: duco_controller.pc  duco_demo.pc  duco_driver.pc  duco_gcr10_2000_moveit_config.pc  duco_gcr10_moveit_config.pc  duco_gcr12_1300_moveit_config.pc  duco_gcr14_moveit_config.pc  duco_gcr16_2000_moveit_config.pc  duco_gcr16_moveit_config.pc  duco_gcr20_1400_moveit_config.pc  duco_gcr20_moveit_config.pc  duco_gcr25_moveit_config.pc  duco_gcr3.pc  duco_gcr30_1100_moveit_config.pc  duco_gcr3_moveit_config.pc  duco_gcr5_moveit_config.pc  duco_gcr7_910_moveit_config.pc  duco_msgs.pc  duco_support.pc
launch/: gcr5_demo.launch
src/: gcr5_demo.cpp
src/duco_controller/: CHANGELOG.rst  CMakeLists.txt
src/duco_controller/src/: joint_trajectory_action.cpp
src/duco_driver/: CHANGELOG.rst  CMakeLists.txt  IO Control.md  README.md
src/duco_driver/config/: ducorobot.conf
src/duco_driver/include/duco_driver/: DucoCobot.h  DucoDriver.h  DucoRobotInterface.h  DucoRobotStatus.h
src/duco_driver/src/: DucoDriver.cpp  DucoDriverNode.cpp  DucoRobotInterface.cpp  DucoRobotStatus.cpp  DucoRobotStatusNode.cpp
src/duco_gcr10_2000_moveit_config/: .setup_assistant  CMakeLists.txt
src/duco_gcr10_2000_moveit_config/config/: controllers.yaml  duco_gcr10_2000.srdf  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/duco_gcr10_2000_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  duco_gcr10_2000_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/duco_gcr10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/duco_gcr10_moveit_config/config/: controllers.yaml  duco_gcr10.srdf  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/duco_gcr10_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  duco_gcr10_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/duco_gcr12_1300_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/duco_gcr12_1300_moveit_config/config/: controllers.yaml  duco_gcr12_1300.srdf  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/duco_gcr12_1300_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  duco_gcr12_1300_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/duco_gcr14_moveit_config/: .setup_assistant  CMakeLists.txt
src/duco_gcr14_moveit_config/config/: controllers.yaml  duco_gcr14.srdf  fake_controllers.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/duco_gcr14_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  duco_gcr14_moveit_controller_manager.launch.xml  duco_moveit_rviz.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/duco_gcr16_2000_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/duco_gcr16_moveit_config/: .setup_assistant  CMakeLists.txt
src/duco_gcr20_1400_moveit_config/: .setup_assistant  CMakeLists.txt
src/duco_gcr20_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/duco_gcr25_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/duco_gcr3/: CMakeLists.txt
src/duco_gcr30_1100_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/duco_gcr3_moveit_config/: .setup_assistant  CMakeLists.txt
src/duco_gcr5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/duco_gcr7_910_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/duco_msgs/: CHANGELOG.rst  CMakeLists.txt
src/duco_support/: CMakeLists.txt  package.xml
src/duco_support/urdf/: duco_gcr10_1300.urdf  duco_gcr10_2000.urdf  duco_gcr12_1300.urdf  duco_gcr14_1400.urdf  duco_gcr16_2000.urdf  duco_gcr16_960.urdf  duco_gcr20_1100.urdf  duco_gcr20_1400.urdf  duco_gcr25_1800.urdf  duco_gcr30_1100.urdf  duco_gcr3_618.urdf  duco_gcr5.urdf  duco_gcr7_910.urdf
(+321 files in other folders)
