<?xml version="1.0"?>
<package>
  <name>duco_support</name>
  <version>0.0.0</version>
  <description>The duco_support package</description>
  <maintainer email="hansonglin.in@siasun.com">Song Lin</maintainer>
  <license>BSD</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>urdf</run_depend>


</package>
